--- a/photo.css
+++ b/photo.css
@@ -1,10 +1,54 @@
-#photoPanel{
-    width: calc(100% - 20%);
-    height: 600px;
-    background-color: rgba(138, 43, 226,0.05);
+
+#photoList{
+    position: relative;
+    width: calc(100% - 25%);
     margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 120px;
+    margin-top: 80px;
+    height: 600px;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+}
+#photoList1{
+    position: relative;
+    width: calc(100% - 25%);
+    margin-left: 10%;
+    margin-top: 80px;
+    height: 600px;
     display: flex;
     justify-content: center;
+    padding: 50px;
+}
+.album{
+    width: 230px;
+    height: 210px;
+    transition-duration: 0.3s;
+    display: flex;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.album:hover{
+    width: 280px;
+    height: 220px;
+}
+.album a:hover p{
+    text-decoration: underline;
+}
+.imgCont{
+    width: 800px;
+    display: flex;
+    justify-content: center;
+}
+.bx-wrapper{
+    border: none;
+    box-shadow: 0em;
+    background: none;
+}
+.slider{
+    border: 0;
+}
+
+.bx-wrapper .bx-pager.bx-default-pager a:hover, .bx-wrapper .bx-pager.bx-default-pager a.active, .bx-wrapper .bx-pager.bx-default-pager a:focus {
+    background: white;
 }
